Test Sandbox Project/src/objects/Agent_Response_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Agent Response Case</relationshipLabel>
        <relationshipName>Agent_Response_Case</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Taken__c</fullName>
        <label>Date Survey Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(Date_Survey_Taken__c) == 1, &apos;January&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 2, &apos;February&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 3, &apos;March&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 4, &apos;April&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 5, &apos;May&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 6, &apos;June&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 7, &apos;July&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 8, &apos;August&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 9, &apos;September&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 10, &apos;October&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 11, &apos;November&apos;, 
IF ( MONTH(Date_Survey_Taken__c) == 12, &apos;December&apos;,&apos;&apos;)))))))))))) 
&amp;&apos; &apos;&amp;TEXT(Year(Date_Survey_Taken__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Taken__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipLabel>Agent Response Case</relationshipLabel>
        <relationshipName>Agent_Response_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent_Response_Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>(Date_Survey_Taken__c -
(
DATE(year(Date_Survey_Taken__c),month(Date_Survey_Taken__c),1) -
CASE( MOD( DATE(year(Date_Survey_Taken__c),month(Date_Survey_Taken__c),1) - DATE(1900, 1, 7), 7),
0, 3,
1, 4,
2, 5,
3, 6,
4, 0,
5, 1,
6, 2
,0)
)) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week ?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agent Response Case</label>
    <nameField>
        <displayFormat>ARC-{0000000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Response Case</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>